[project]
name = "spine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mlx>=0.29.3",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]
